--- a/scss/blocks/_advantages.scss
+++ b/scss/blocks/_advantages.scss
@@ -33,4 +33,11 @@
         }
       }
     }
+  @media (max-width: 1040px) {
+    .items {
+      .item-card {
+        max-width: 280px;
+      }
+    }
+  }
 }
